--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no,maximum-scale=1.0, minimum-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./fonts/iconfont.css">
     <script src="./rem.js"></script>
     <title>山村野人</title>
   </head>
