--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./fonts/iconfont.css">
     <script src="./rem.js"></script>
-    <title>山村野人</title>
+    <title>山野💭</title>
   </head>
   <body>
     <noscript>
